--- a/Day2/Ch03/kustomize/base/ingress.yaml
+++ b/Day2/Ch03/kustomize/base/ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/subnets: <Subnet IDs>
+    alb.ingress.kubernetes.io/subnets: subnet-0d91ea00824be4aa5, subnet-032a9abfa14c9dc78 
 spec:
   ingressClassName: alb
   rules:
